# clima-backend

./: .gitignore  guia.txt  it  pyproject.toml
src/: db.sqlite3
src/clima_project/: asgi.py  settings.py  urls.py  wsgi.py
src/weather_api/: urls.py  views.py
